# HACConsumer

./: .env  .env.default  .gitignore  Dockerfile.go  Dockerfile.python  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
hacconsumer/: __main__.py  hac_report.py  server.py
hacconsumer/static/: cyberpunk.css  main.js
hacconsumer/templates/: index.html
src/: main.ts
test/: server_test.py
