[tool.poetry]
name = "hacconsumer"
version = "0.1.0"
description = "Consume and display HACApi output"
authors = ["ouoertheo <jamin@tomeofjamin.net>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
Jinja2 = "^3.1.3"
loguru = "^0.7.2"
requests = "^2.31.0"
uvicorn = "^0.25.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
